# wlasl300-sign-language

./: .gitignore  README.md  conftest.py  env.example  pyproject.toml  requirements.txt
config/: __init__.py  base_config.py  config.yaml
dataset/: __init__.py
dataset/annotations/: __init__.py  build_annotations.py  vocab.json
dataset/data/: __init__.py  wlasl_dataset.py
html/: classifier_60_epoch_results.html  conv3d_animation.html  temporal_full_results.html  training_conclusions.html
inference/: __init__.py  eval_epochs.py  inference.py  inference_classifier.py  live_inference.py  visualise_embeddings.py
models/: __init__.py  classifier_head.py  deep_classifier_head.py  i3d_backbone.py  linear_head.py  projection_head.py  sign_model.py  sign_model_classifier.py  sign_model_deep.py  sign_model_linear.py  sign_model_temporal.py  temporal_neck.py
notebooks/: training_colab.ipynb
tests/: __init__.py  test_annotation.py  test_classifier_models.py  test_dataset.py  test_embedding_utils.py  test_inference.py  test_metrics.py  test_models.py  test_video_utils.py  test_visualization.py
train/: __init__.py  train.py  train_classifier.py
utils/: __init__.py  augmentation.py  embedding_utils.py  metrics.py  video_utils.py  visualization.py
